Fixed loading text aligned to the left on mobile

--- a/src/app/style/globals.css
+++ b/src/app/style/globals.css
@@ -217,6 +217,10 @@
     cursor: pointer;
   }
 
+  .text-center {
+    text-align: center;
+  }
+
   @media screen and (min-width: 501px) {
     main p {
       text-align: center;
